# Anastomosis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.claude/agents/: grunt.md  implementer.md  qa-reviewer.md  researcher.md
.claude/skills/model-hierarchy/: SKILL.md
.claude/skills/polymerase-review/: SKILL.md
.claude/skills/quality-gate/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  CS50_SUBMISSION.md  DEMO_STORYBOARD.md  DISCLAIMER.md  EHR_FORMATS.md  PLAN.md  SECURITY.md
docs/vendor_refs/: ORACLE_EHI_SCHEMA.md  README.md
paper/: README.md  paper.bib  paper.md
src/anastomosis/: __init__.py  cli.py  pipeline.py
src/anastomosis/core/: codes.py  commands.py  locking.py  logutil.py  migrate.py  output.py  textutil.py  timeutil.py
src/anastomosis/core/fhir/: __init__.py  export.py  ingest.py
src/anastomosis/core/model/: __init__.py  actors.py  base.py  bundle.py  clinical.py  coverage.py  document.py  encounter.py  patient.py
src/anastomosis/deliver/: __init__.py  pdfindex.py  router.py
src/anastomosis/deliver/archive/: __init__.py  archive.py  templates.py
src/anastomosis/deliver/browser/: __init__.py  (+11 more)
src/anastomosis/destinations/: __init__.py  base.py  browserpack.py  loader.py  registry.py  registry.yaml  wizard.py
src/anastomosis/gui/: __init__.py  controller.py  events.py  shell.py
src/anastomosis/packgen/: __init__.py  emit.py  extract.py  infer.py
src/anastomosis/qa/: __init__.py  base.py  checks.py  runner.py
src/anastomosis/reconstruct/: __init__.py  chromium.py  engine.py  packs.py  packtrust.py
src/anastomosis/sources/: __init__.py  base.py
tests/e2e/: test_golden_rendering.py  test_packgen_emit_validation.py  test_packgen_rediscovery.py  test_pf_pack_packgen_rediscovery.py  test_pf_pack_rendering.py  test_synthea_pipeline.py
tests/e2e/goldens/: pf_tebra_v9_generic_soap.json  pf_tebra_v9_practice_fusion_soap.json
tests/fixtures/ccda/: README.md  feedface_ccd.xml
tests/fixtures/fhir_r4/: README.md  uscore_bundle.json
tests/fixtures/oracle_ehi_v500/: README.md
tests/fixtures/pf_tebra_v9/: README.md  facilities.tsv  occupation-industry.tsv  patient-advance-directives.tsv  patient-allergy-reactions.tsv  patient-allergy.tsv  patient-demographics.tsv  patient-diagnoses.tsv  patient-documents.tsv  patient-education.tsv  patient-encounter-addendums.tsv  patient-encounter-diagnoses.tsv  patient-encounter-observations.tsv  patient-encounters.tsv  patient-ethnicity.tsv  patient-family-history-diagnoses.tsv  patient-family-medical-history.tsv  patient-financial-resources.tsv  patient-gender-identity-sexual-orientation.tsv  patient-guarantor.tsv  patient-immunizations.tsv  patient-insurances.tsv  patient-medications.tsv  patient-prescriptions.tsv  patient-race.tsv  patient-smokingstatus.tsv  pinned-notes.tsv  prescription-transactions.tsv  providers.tsv  superbill-insurances.tsv  tribal-affiliation.tsv
tests/fixtures/synthea/: README.md  synthea_ccda_sample.xml
tests/integration/: test_fhir_live.py
tests/unit/: test_archive.py  test_browser_cdp.py  test_browser_engine.py  test_browser_manager.py  test_browser_manifest.py  test_browser_parallel.py  test_browser_reports.py  test_browser_states.py  test_browser_tracking.py  test_browserpack.py  test_bundle.py  test_ccda.py  test_ccda_export.py  test_ccda_standard.py  test_cli.py  test_codes.py  test_commands.py  test_destination_loader.py  test_destination_registry.py  test_engine.py  test_fhir.py  test_fhir_client.py  test_fhir_destination.py  test_fhir_r4_source.py  test_gui_assets.py  test_gui_controller.py  test_locking.py  test_logutil.py  test_migrate.py  test_model.py  test_oracle_ehi.py  test_output.py  test_packgen_emit.py  test_packgen_extract.py  test_packgen_infer.py  test_packs.py  test_packtrust.py  test_pf_pack.py  test_pf_tebra.py  test_phi_scan.py  (+7 more)
tools/: check.sh  phi_allowlist.txt  phi_hashes.json  phi_scan.py  regen_goldens.py
(+57 files in other folders)
